--- a/index.html
+++ b/index.html
@@ -395,21 +395,21 @@
                         <div class="function" id="functionDiv">
                             <div class="element active-1">
                                 <button class="client-buy-btn active" id="back--order">
-                                    <img class="client--order-header-img" src="images/icon-left.png" alt="">
+                                    <img class="client--order-header-img" src="../images/icon-left.png" alt="">
                                 </button>
                                 <h1 class="function__head-title">Functions</h1>  
                             </div>
                             <div class="function--background" >
                                 <div class="function__items" id="function-information">
-                                    <img class="function__img" src="/images/func_1.png" alt="">
+                                    <img class="function__img" src="../images/func_1.png" alt="">
                                     <h1 class="function_title">Information</h1>
                                 </div>
                                 <div class="function__items" >
-                                    <img class="function__img" src="/images/func_2.png" alt="">
+                                    <img class="function__img" src="../images/func_2.png" alt="">
                                     <h1 class="function_title">Language</h1>
                                 </div>
                                 <div class="function__items"  id="order-information">
-                                    <img class="function__img" src="/images/func_3.png" alt="">
+                                    <img class="function__img" src="../images/func_3.png" alt="">
                                     <h1 class="function_title">Order history</h1>
                                 </div>
                             </div>
@@ -422,7 +422,7 @@
                         <div class="profile" id="profileDiv">
                             <div class="element">
                                 <button class="client-buy-btn active" id="back--order">
-                                    <img class="client--order-header-img" src="images/icon-left.png" alt="">
+                                    <img class="client--order-header-img" src="../images/icon-left.png" alt="">
                                 </button>
                                 <h1 class="order-header--text">Profil</h1>
                             </div>
@@ -438,7 +438,7 @@
 
                             <div class="order-div">
                                 <div class="order--history" id="gotoClientOrder">
-                                    <img class="order--history-img" src="images/func_3.png" alt="">
+                                    <img class="order--history-img" src="../images/func_3.png" alt="">
                                     <p class="order-title">Order history</p>
                                 </div>
                             </div>
@@ -457,26 +457,26 @@
                             </div>
                             <div class="information--background">
                                 <div class="information__items">
-                                    <img class="information--img" src="images/info_1.png" alt="">
+                                    <img class="information--img" src="../images/info_1.png" alt="">
                                     <h1 class="information--text">+998 71 000 00 71</h1>
                                 </div>
                                 <div class="information__items">
-                                    <img class="information--img" src="images/info_2.png" alt="">
+                                    <img class="information--img" src="../images/info_2.png" alt="">
                                     <h1 class="information--text">Tashkent, str. Amir Temur 15</h1>
                                 </div>
                                 <div class="information__items">
-                                    <img class="information--img" src="images/info_3.png" alt="">
+                                    <img class="information--img" src="../images/info_3.png" alt="">
                                     <h1 class="information--text">F.P.D_77@gmail.com</h1>
                                 </div>
                                 <div class="information__items">
-                                    <img class="information--img" src="images/info_4.png" alt="">
+                                    <img class="information--img" src="../images/info_4.png" alt="">
                                     <h1 class="information--text">www.F.P.D_77.com</h1>
                                 </div>
                                 <div class="information--icon-background">
-                                    <img class="information--icon-background-items" src="images/d_info_1.png" alt="">
-                                    <img class="information--icon-background-items" src="images/d_info_2.png" alt="">
-                                    <img class="information--icon-background-items" src="images/d_info_3.png" alt="">
-                                    <img class="information--icon-background-items" src="images/d_info_4.png" alt="">
+                                    <img class="information--icon-background-items" src="../images/d_info_1.png" alt="">
+                                    <img class="information--icon-background-items" src="../images/d_info_2.png" alt="">
+                                    <img class="information--icon-background-items" src="../images/d_info_3.png" alt="">
+                                    <img class="information--icon-background-items" src="../images/d_info_4.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -487,7 +487,7 @@
                        <div class="order--profile-or-burger" id="orderDiv">
                            <div class="element order--element">
                                <button class="client-buy-btn active" id="back--order">
-                                   <img class="client--order-header-img" src="images/icon-left.png" alt="">
+                                   <img class="client--order-header-img" src="../images/icon-left.png" alt="">
                                 </button>
                                 <h1 class="order--title">Orders history</h1>
                             </div>
@@ -507,7 +507,7 @@
                             <div>
                                 <div class="client--order-header">
                                     <button class="client-buy-btn" id="back--order">
-                                        <img class="client--order-header-img" src="images/icon-left.png" alt="">
+                                        <img class="client--order-header-img" src="../images/icon-left.png" alt="">
                                     </button>
                                     <h1 class="order-header-title"></h1>
                                 </div>
@@ -587,22 +587,22 @@
                             <div class="order--payment-cards">
                                 <div class="order--payment-card order--payment-card--active" id="button-1">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img " src="images/Card.svg" >
-                                        <img class="img-activator img-activator--active" src="images/Mask.svg" id="imgActive-1">    
+                                        <img class="order--payment-img " src="../images/Card.svg" >
+                                        <img class="img-activator img-activator--active" src="../images/Mask.svg" id="imgActive-1">    
                                     </div>
                                     <p class="card-title">Credit Card</p>   
                                 </div>
                                 <div class="order--payment-card" id="button-2">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img" src="images/Paypal.svg" alt="">
-                                        <img class="img-activator" src="images/Mask.svg" alt="" id="imgActive-2">    
+                                        <img class="order--payment-img" src="../images/Paypal.svg" alt="">
+                                        <img class="img-activator" src="../images/Mask.svg" alt="" id="imgActive-2">    
                                     </div>
                                     <p class="card-title">Paypal</p>
                                 </div>
                                 <div class="order--payment-card" id="button-3">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img" src="images/Wallet.svg" alt="">
-                                        <img class="img-activator" src="images/Mask.svg" alt="" id="imgActive-3">    
+                                        <img class="order--payment-img" src="../images/Wallet.svg" alt="">
+                                        <img class="img-activator" src="../images/Mask.svg" alt="" id="imgActive-3">    
                                     </div>
                                     <p class="card-title">Cash</p>
                                 </div>
