--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </li>
                             <li class="head__li-1">
                                 <div class="template">
-                                    <button class="head__temp"><img src="images/search_1.png"></img></button>
+                                    <button class="head__temp"><img src="../images/search_1.png"></img></button>
                                     <input class="head__input" type="text" placeholder="Search for food, coffe, etc..">
                                 </div>
                             </li>
@@ -94,7 +94,7 @@
                         <h1 class="text__title">Choose Dishes</h1>
                         <div class="choose__select" id="select">
                             <button class="img-item">
-                                <img class="img--active" src="/images/icons8_expand_arrow_96px 1.png"></button>
+                                <img class="img--active" src="../images/icons8_expand_arrow_96px 1.png"></button>
                             </button>
                             <h3 class="select__text">Price</h3>
                             <div class="menu-btn">
@@ -378,11 +378,11 @@
                         <div class="window__item" id="windowDiv">
                             <div class="element">
                                 <button class="client-buy-btn active" id="back--order">
-                                    <img class="client--order-header-img" src="images/icon-left.png" alt="">
+                                    <img class="client--order-header-img" src="../images/icon-left.png" alt="">
                                 </button>
                                 <h1 class="window__text">Orders</h1>
                             </div>
-                            <img class="window__img" src="images/English breakfast-pana 1.png" alt="">
+                            <img class="window__img" src="../images/English breakfast-pana 1.png" alt="">
                             <h1 class="window__text-2">No Order</h1>
                             <p class="window__text-title">Go find the products you like</p>
                             <button id="window--connect--orders" class="window__btn">To Order</button>
