--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </li>
                             <li class="head__li-1">
                                 <div class="template">
-                                    <button class="head__temp"><img src="../images/search_1.png"></img></button>
+                                    <button class="head__temp"><img src="../pizza/images/search_1.png"></img></button>
                                     <input class="head__input" type="text" placeholder="Search for food, coffe, etc..">
                                 </div>
                             </li>
@@ -94,7 +94,7 @@
                         <h1 class="text__title">Choose Dishes</h1>
                         <div class="choose__select" id="select">
                             <button class="img-item">
-                                <img class="img--active" src="../images/icons8_expand_arrow_96px 1.png"></button>
+                                <img class="img--active" src="../pizza/images/icons8_expand_arrow_96px 1.png"></button>
                             </button>
                             <h3 class="select__text">Price</h3>
                             <div class="menu-btn">
@@ -422,7 +422,7 @@
                         <div class="profile" id="profileDiv">
                             <div class="element">
                                 <button class="client-buy-btn active" id="back--order">
-                                    <img class="client--order-header-img" src="../images/icon-left.png" alt="">
+                                    <img class="client--order-header-img" src="../pizza/images/icon-left.png" alt="">
                                 </button>
                                 <h1 class="order-header--text">Profil</h1>
                             </div>
@@ -451,32 +451,32 @@
                         <div class="information" id="informationDiv">
                             <div class="element element-plus">
                                 <button class="client-buy-btn active" id="back--order">
-                                    <img class="client--order-header-img" src="images/icon-left.png" alt="">
+                                    <img class="client--order-header-img" src="../pizza/images/icon-left.png" alt="">
                                 </button>
                                 <h1 class="information--head-title">Information</h1>
                             </div>
                             <div class="information--background">
                                 <div class="information__items">
-                                    <img class="information--img" src="../images/info_1.png" alt="">
+                                    <img class="information--img" src="../pizza/images/info_1.png" alt="">
                                     <h1 class="information--text">+998 71 000 00 71</h1>
                                 </div>
                                 <div class="information__items">
-                                    <img class="information--img" src="../images/info_2.png" alt="">
+                                    <img class="information--img" src="../pizza/images/info_2.png" alt="">
                                     <h1 class="information--text">Tashkent, str. Amir Temur 15</h1>
                                 </div>
                                 <div class="information__items">
-                                    <img class="information--img" src="../images/info_3.png" alt="">
+                                    <img class="information--img" src="../pizza/images/info_3.png" alt="">
                                     <h1 class="information--text">F.P.D_77@gmail.com</h1>
                                 </div>
                                 <div class="information__items">
-                                    <img class="information--img" src="../images/info_4.png" alt="">
+                                    <img class="information--img" src="../pizza/images/info_4.png" alt="">
                                     <h1 class="information--text">www.F.P.D_77.com</h1>
                                 </div>
                                 <div class="information--icon-background">
-                                    <img class="information--icon-background-items" src="../images/d_info_1.png" alt="">
-                                    <img class="information--icon-background-items" src="../images/d_info_2.png" alt="">
-                                    <img class="information--icon-background-items" src="../images/d_info_3.png" alt="">
-                                    <img class="information--icon-background-items" src="../images/d_info_4.png" alt="">
+                                    <img class="information--icon-background-items" src="../pizza/images/d_info_1.png" alt="">
+                                    <img class="information--icon-background-items" src="../pizza/images/d_info_2.png" alt="">
+                                    <img class="information--icon-background-items" src="../pizza/images/d_info_3.png" alt="">
+                                    <img class="information--icon-background-items" src="../pizza/images/d_info_4.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -487,7 +487,7 @@
                        <div class="order--profile-or-burger" id="orderDiv">
                            <div class="element order--element">
                                <button class="client-buy-btn active" id="back--order">
-                                   <img class="client--order-header-img" src="../images/icon-left.png" alt="">
+                                   <img class="client--order-header-img" src="../pizza/images/icon-left.png" alt="">
                                 </button>
                                 <h1 class="order--title">Orders history</h1>
                             </div>
@@ -507,7 +507,7 @@
                             <div>
                                 <div class="client--order-header">
                                     <button class="client-buy-btn" id="back--order">
-                                        <img class="client--order-header-img" src="../images/icon-left.png" alt="">
+                                        <img class="client--order-header-img" src="../pizza/images/icon-left.png" alt="">
                                     </button>
                                     <h1 class="order-header-title"></h1>
                                 </div>
@@ -587,22 +587,22 @@
                             <div class="order--payment-cards">
                                 <div class="order--payment-card order--payment-card--active" id="button-1">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img " src="../images/Card.svg" >
-                                        <img class="img-activator img-activator--active" src="../images/Mask.svg" id="imgActive-1">    
+                                        <img class="order--payment-img " src="../pizza/images/Card.svg" >
+                                        <img class="img-activator img-activator--active" src="../pizza/images/Mask.svg" id="imgActive-1">    
                                     </div>
                                     <p class="card-title">Credit Card</p>   
                                 </div>
                                 <div class="order--payment-card" id="button-2">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img" src="../images/Paypal.svg" alt="">
-                                        <img class="img-activator" src="../images/Mask.svg" alt="" id="imgActive-2">    
+                                        <img class="order--payment-img" src="../pizza/images/Paypal.svg" alt="">
+                                        <img class="img-activator" src="../pizza/images/Mask.svg" alt="" id="imgActive-2">    
                                     </div>
                                     <p class="card-title">Paypal</p>
                                 </div>
                                 <div class="order--payment-card" id="button-3">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img" src="../images/Wallet.svg" alt="">
-                                        <img class="img-activator" src="../images/Mask.svg" alt="" id="imgActive-3">    
+                                        <img class="order--payment-img" src="../pizza/images/Wallet.svg" alt="">
+                                        <img class="img-activator" src="../pizza/images/Mask.svg" alt="" id="imgActive-3">    
                                     </div>
                                     <p class="card-title">Cash</p>
                                 </div>
