--- a/index.html
+++ b/index.html
@@ -587,22 +587,22 @@
                             <div class="order--payment-cards">
                                 <div class="order--payment-card order--payment-card--active" id="button-1">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img " src="images/Card.svg" >
-                                        <img class="img-activator img-activator--active" src="images/Mask.svg" id="imgActive-1">    
+                                        <img class="order--payment-img " src="images/Card.png" >
+                                        <img class="img-activator img-activator--active" src="images/Mask.png" id="imgActive-1">    
                                     </div>
                                     <p class="card-title">Credit Card</p>   
                                 </div>
                                 <div class="order--payment-card" id="button-2">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img" src="images/Paypal.svg" alt="">
-                                        <img class="img-activator" src="images/Mask.svg" alt="" id="imgActive-2">    
+                                        <img class="order--payment-img" src="images/Paypal.png" alt="">
+                                        <img class="img-activator" src="images/Mask.png" alt="" id="imgActive-2">    
                                     </div>
                                     <p class="card-title">Paypal</p>
                                 </div>
                                 <div class="order--payment-card" id="button-3">
                                     <div class="new-card--active">
-                                        <img class="order--payment-img" src="images/Wallet.svg" alt="">
-                                        <img class="img-activator" src="images/Mask.svg" alt="" id="imgActive-3">    
+                                        <img class="order--payment-img" src="images/Wallet.png" alt="">
+                                        <img class="img-activator" src="images/Mask.png" alt="" id="imgActive-3">    
                                     </div>
                                     <p class="card-title">Cash</p>
                                 </div>
@@ -633,7 +633,7 @@
                                 <p class="card-title plus--item-2">Order Type</p>
                                 <div class="choose__select-card" id="select">
                                     <button class="img-item">
-                                        <img  class="choose__select-card-img" src="/icons8_expand_arrow_96px 1.png">
+                                        <img  class="choose__select-card-img" src="images/icons8_expand_arrow_96px 1.png">
                                     </button>
                                     <h3 class="select__text--title">Dine In</h3>
                                     <div class="menu-btn">
