bug fixed again

--- a/index.html
+++ b/index.html
@@ -631,14 +631,14 @@
                         <div class="order--payment-select-card">
                             <div>
                                 <p class="card-title plus--item-2">Order Type</p>
-                                <div class="choose__select-card" id="select">
+                                <div class="choose__select-card" id="select-1">
                                     <button class="img-item">
                                         <img  class="choose__select-card-img" src="images/icons8_expand_arrow_96px 1.png">
                                     </button>
                                     <h3 class="select__text--title">Dine In</h3>
-                                    <div class="menu-btn">
-                                        <a class="select__title" >Name</a>
-                                        <a class="select__title select__title-1" >Favourite</a>
+                                    <div class="menu--btn-1">
+                                        <a class="select--title-1" >nav</a>
+                                        <a class="select--title-1 select__title-1" >Favourite</a>
                                     </div>  
                                 </div>
                             </div>
