--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <aside class="tab"> 
             <ul class="tabs">
-                <li class="li-1"onclick="applyRadius(1)" id="hamburger">
+                <li class="li-1" onclick="applyRadius(1)" id="hamburger">
                     <button  class="tabs__item-button"  id="toggleButton-2" data-button="content-1">
                         <!-- <img class="tabs__item-img tabs__item-active" src="images/tab_1.png"> -->
                         <i style="font-size: 1.5rem; display: flex;" class="style-icons fa-solid fa-bars"></i>
@@ -47,6 +47,7 @@
                 <li class="li-1"onclick="applyRadius(7)" id="cart">
                     <button  class="tabs__item-button"  id="toggleButton" data-button="content-7">
                         <i style="font-size: 1.5rem; display: flex;" class="style-icons fa-solid fa-cart-shopping"></i>
+                        <p class="number-class" id="number-counter">1</p>
                     </button> 
                 </li>
                 <li class="li-1"onclick="applyRadius(8)" id="toggle-3">
@@ -661,7 +662,6 @@
                     <div class="bg__color" id="bg__color-1"></div>  
                 </div>
         </div>
-       
         <script src="js/main.js"></script>
         <script src="js/support.js"></script>
     </main>
